src/Components/CompanyCard/styles.css
.link-company {
  text-decoration: none;
  color: #3e3e3e;
  border-radius: 5px;
  transition: transform 0.2s;
  border: 1px solid #ebeced;
  min-width: 275px;
  width: 100%;
}

.link-company:hover {
  transform: translateY(-2px);
}

.link-company .box-company {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  background: #fff;
  border-radius: 5px;
  border: 1px solid #ebeced;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.16);
}

.link-company .box-company .image-area {
  width: 100%;
  height: 200px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  border-radius: 5px 5px 0 0;
}

.link-company .box-company .image-area img {
  /* width: 100%; */
  /* height: 200px; */
  /* /* height: 100%; */
  --app-header-background-front-layer_-_background-position: 0 0;
  --app-header-background-front-layer_-_background-repeat: no-repeat;
  --app-header-background-front-layer_-_background-size: 100% auto;
  flex: 1;
  overflow-x: auto;
}

.link-company .box-company .company-information {
  padding: 5px 15px;
  width: 100%;
  height: 100%;
}

.link-company .box-company .company-information .name-petshop {
  font-size: 14px;
  color: #3e3e3e;
}

.link-company .box-company .company-information .name-petshop h1 {
  /* autoprefixer: off */
  -webkit-box-orient: vertical;
  display: block;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}


.link-company .box-company .company-information .description-petshop {
  font-size: 15px;
  color: #8b8b8b;
  /* autoprefixer: off */
  -webkit-box-orient: vertical;
  display: block;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 15px;
  height: 46px;
}

.link-company .box-company .company-information .paws-status {
  display: flex;
  justify-content: left;
  align-items: center;
  margin-top: 10px;
}

.link-company .box-company .company-information .paws-status .rate-paw {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #7bbb5e;
  font-size: 16px;
  margin-right: 10px;
}

.link-company .box-company .company-information .paws-status .rate-paw span {
  margin-right: 3px;
  margin-top: 2px;
}

.link-company .box-company .company-information .paws-status .status {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #717171;
  font-size: 16px;
  padding: 2px 10px;
  border-radius: 5px;
  border: 1px solid #ebeced;
}

